proxy/service.yml
kind: Service
apiVersion: v1
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
