proxy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  # - host: proxy.minikube
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: proxy
  #         servicePort: 8080
  - host: mockserver
    http:
      paths:
      - backend:
          serviceName: proxy
          servicePort: 8080
